
iconsdir = @datadir@/docs/images

icons_DATA = \
  checkedin-finished.gif \
  conflicts-finished.gif \
  identical-finished.gif \
  moddep-finished.gif \
  modified-error.gif \
  modified-finished.gif \
  modified-missing.gif \
  modified-queued.gif \
  modified-running.gif \
  modified-stale.gif \
  needsco-finished.gif \
  pending-finished.gif


