
imagesdir = @ROOT_INST_DIR@/share/docs/javadoc/images

images_DATA = \
  CoordSys.gif \
  CoordSysIdentity.gif \
  CoordSysMultCoordSys.gif \
  CoordSysNScale.gif \
  CoordSysTranslate.gif \
  CoordSysUScale.gif \
  CoordSysXformPoint.gif \
  CoordSysXformVector.gif \
  EnvMapCross.gif \
  EnvCross.jpg \
  EnvCube.0001.jpg \
  EnvCube.0002.jpg \
  EnvCube.0003.jpg \
  EnvCube.0004.jpg \
  EnvCube.0005.jpg \
  EnvCube.0006.jpg \
  Matrix33Array.gif \
  Matrix33ArrayIndex.gif \
  Matrix33Identity.gif \
  Matrix33MathIndex.gif \
  Matrix33MultMatrix.gif \
  Matrix33MultTuple.gif \
  Matrix33NScale.gif \
  Matrix33Rotate.gif \
  Matrix33Translate.gif \
  Matrix33Transpose.gif \
  Matrix33UScale.gif \
  Matrix33Zero.gif \
  MatrixArray.gif \
  MatrixArrayIndex.gif \
  MatrixIdentity.gif \
  MatrixDiagonalScalar.gif \
  MatrixDiagonalTuple.gif \
  MatrixInverse.gif \
  MatrixMathIndex.gif \
  MatrixMultMatrix.gif \
  MatrixMultTuple.gif \
  MatrixTranspose.gif \
  MatrixZero.gif
