
imagesdir = @ROOT_INST_DIR@/share/docs/images/node-icons

images_DATA = \
  Added-Aborted.gif \
  Added-Failed.gif \
  Added-Finished.gif \
  Added-Paused.gif \
  Added-Queued.gif \
  Added-Running.gif \
  Added-Stale.gif \
  Added-Undefined.gif \
  Blank.gif \
  CheckedIn-Aborted.gif \
  CheckedIn-Failed.gif \
  CheckedIn-Finished.gif \
  CheckedIn-Paused.gif \
  CheckedIn-Queued.gif \
  CheckedIn-Running.gif \
  CheckedIn-Stale.gif \
  CheckedIn-Undefined.gif \
  Collapsed.gif \
  Conflicted-Aborted.gif \
  Conflicted-Failed.gif \
  Conflicted-Finished.gif \
  Conflicted-Paused.gif \
  Conflicted-Queued.gif \
  Conflicted-Running.gif \
  Conflicted-Stale.gif \
  Conflicted-Undefined.gif \
  Identical-Aborted.gif \
  Identical-Failed.gif \
  Identical-Finished.gif \
  Identical-Paused.gif \
  Identical-Queued.gif \
  Identical-Running.gif \
  Identical-Stale.gif \
  Identical-Undefined.gif \
  Missing-Aborted.gif \
  Missing-Failed.gif \
  Missing-Finished.gif \
  Missing-Paused.gif \
  Missing-Queued.gif \
  Missing-Running.gif \
  Missing-Stale.gif \
  Missing-Undefined.gif \
  MissingNewer-Aborted.gif \
  MissingNewer-Failed.gif \
  MissingNewer-Finished.gif \
  MissingNewer-Paused.gif \
  MissingNewer-Queued.gif \
  MissingNewer-Running.gif \
  MissingNewer-Stale.gif \
  MissingNewer-Undefined.gif \
  Modified-Aborted.gif \
  Modified-Failed.gif \
  Modified-Finished.gif \
  ModifiedLinks-Aborted.gif \
  ModifiedLinks-Failed.gif \
  ModifiedLinks-Finished.gif \
  ModifiedLinks-Paused.gif \
  ModifiedLinks-Queued.gif \
  ModifiedLinks-Running.gif \
  ModifiedLinks-Stale.gif \
  ModifiedLinks-Undefined.gif \
  Modified-Paused.gif \
  Modified-Queued.gif \
  Modified-Running.gif \
  Modified-Stale.gif \
  Modified-Undefined.gif \
  NeedsCheckOut-Aborted.gif \
  NeedsCheckOut-Failed.gif \
  NeedsCheckOut-Finished.gif \
  NeedsCheckOutMajor-Aborted.gif \
  NeedsCheckOutMajor-Failed.gif \
  NeedsCheckOutMajor-Finished.gif \
  NeedsCheckOutMajor-Paused.gif \
  NeedsCheckOutMajor-Queued.gif \
  NeedsCheckOutMajor-Running.gif \
  NeedsCheckOutMajor-Stale.gif \
  NeedsCheckOutMajor-Undefined.gif \
  NeedsCheckOutMicro-Aborted.gif \
  NeedsCheckOutMicro-Failed.gif \
  NeedsCheckOutMicro-Finished.gif \
  NeedsCheckOutMicro-Paused.gif \
  NeedsCheckOutMicro-Queued.gif \
  NeedsCheckOutMicro-Running.gif \
  NeedsCheckOutMicro-Stale.gif \
  NeedsCheckOutMicro-Undefined.gif \
  NeedsCheckOut-Paused.gif \
  NeedsCheckOut-Queued.gif \
  NeedsCheckOut-Running.gif \
  NeedsCheckOut-Stale.gif \
  NeedsCheckOut-Undefined.gif \
  Obsolete-Aborted.gif \
  Obsolete-Failed.gif \
  Obsolete-Finished.gif \
  Obsolete-Paused.gif \
  Obsolete-Queued.gif \
  Obsolete-Running.gif \
  Obsolete-Stale.gif \
  Obsolete-Undefined.gif \
  Pending-Aborted.gif \
  Pending-Failed.gif \
  Pending-Finished.gif \
  Pending-Paused.gif \
  Pending-Queued.gif \
  Pending-Running.gif \
  Pending-Stale.gif \
  Pending-Undefined.gif

