
icondir = @ROOT_INST_DIR@/share/splash

icon_DATA = \
  Splash.gif


NUKE = /base/apps/i686-pc-linux-gnu-opt/Nuke5.1v5/Nuke5.1

# Splash.gif: Splash.nk \
#   $(srcdir)/Splash-bg.png $(srcdir)/Splash-progress.tif $(srcdir)/Splash-vsn.png
# 	$(NUKE) -nx Splash.nk 1,36
# 	convert -delay 5 -loop 0 Splash.????.png $@

